# metalcorepy

./: .env.dev  .gitignore  CELERY_README.md  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  requirements.txt
app/core/: api.py  celery.py  celery_beat.py  custom.py  settings.py  urls.py
app/domains/domain_name/: apps.py  opa.py  urls.py  views.py
app/domains/user/: apps.py  models.py  schema.py  schemas.py  urls.py  views.py
app/domains/user/migrations/: 0001_initial.py
app/infra/management/commands/: create_domain.py  runfull.py
app/infra/security/: opa_client.py
app/infrastructure/management/commands/: create_domain.py
app/shared/auth/: jwt.py
app/shared/helpers/: validate_cpf.py
app/shared/models/: abstract_user_base.py
scripts/: commit-msg
security/: main.rego
