[tool.poetry]
name = "metalcorepy"
version = "0.1.0"
description = ""
authors = ["cosmic-zip <36008397+cosmic-zip@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
